[gd_scene load_steps=26 format=3 uid="uid://k5eem4pva7pg"]

[ext_resource type="Script" uid="uid://dihwtsado2wpr" path="res://scenes/main.gd" id="1_85g3d"]
[ext_resource type="PackedScene" uid="uid://dgygkbtm0burn" path="res://addons/quiver_leaderboards/leaderboard_ui.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bao0i2g4q5l2x" path="res://scenes/whack_a_mole_machine.tscn" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://da1a5ywufx512" path="res://assets/textures/arcade_carpet_1_512.png" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dgl84bi7dw0gt" path="res://assets/textures/Bricks054_1K-JPG_Color.jpg" id="5_tipki"]
[ext_resource type="Texture2D" uid="uid://m1vjac7mfr6b" path="res://assets/textures/Bricks054_1K-JPG_AmbientOcclusion.jpg" id="6_85g3d"]
[ext_resource type="Texture2D" uid="uid://dp783jb7m4iaq" path="res://assets/textures/Bricks054_1K-JPG_NormalGL.jpg" id="7_choun"]
[ext_resource type="Texture2D" uid="uid://cmumnxqcjomq7" path="res://assets/textures/Bricks054_1K-JPG_Roughness.jpg" id="8_ya4ey"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sgp6g"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_o5qli"]
sky_material = SubResource("ProceduralSkyMaterial_sgp6g")

[sub_resource type="Environment" id="Environment_0wfyh"]
background_mode = 2
sky = SubResource("Sky_o5qli")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb6dy"]
bg_color = Color(0.784314, 0.137255, 0.2, 1)
border_color = Color(0.741176, 0.129412, 0.188235, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trceg"]
bg_color = Color(0.862745, 0.207843, 0.270588, 1)
border_color = Color(0.862745, 0.207843, 0.270588, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
bg_color = Color(0.878431, 0.658824, 0, 1)
border_color = Color(0.827451, 0.619608, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(1, 0.756863, 0.027451, 1)
border_color = Color(1, 0.756863, 0.027451, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choun"]
bg_color = Color(0.129412, 0.533333, 0.219608, 1)
border_color = Color(0.117647, 0.494118, 0.203922, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
bg_color = Color(0.156863, 0.654902, 0.270588, 1)
border_color = Color(0.156863, 0.654902, 0.270588, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8y0u"]
bg_color = Color(0, 0.411765, 0.85098, 1)
border_color = Color(0, 0.384314, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
bg_color = Color(0, 0.482353, 1, 1)
border_color = Color(0, 0.482353, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbj1t"]
bg_color = Color(0.352941, 0.384314, 0.407843, 1)
border_color = Color(0.329412, 0.356863, 0.384314, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muem4"]
bg_color = Color(0.423529, 0.458824, 0.490196, 1)
border_color = Color(0.423529, 0.458824, 0.490196, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tbgi4"]
albedo_texture = ExtResource("4_jyhfs")
roughness = 0.9
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_tefeu"]
material = SubResource("StandardMaterial3D_tbgi4")
size = Vector2(6, 6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eb6dy"]
albedo_texture = ExtResource("5_tipki")
roughness_texture = ExtResource("8_ya4ey")
normal_enabled = true
normal_texture = ExtResource("7_choun")
ao_enabled = true
ao_texture = ExtResource("6_85g3d")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_jyhfs"]
material = SubResource("StandardMaterial3D_eb6dy")
size = Vector2(6, 2)
orientation = 2

[node name="Main" type="Node3D"]
script = ExtResource("1_85g3d")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0wfyh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 1.1, 0.7)
current = true

[node name="LeaderboardUI" parent="Camera3D" instance=ExtResource("1_o5qli")]
visible = false
leaderboard_id = "godot-whack-a-mole-high-score-ywum"

[node name="StartUI" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="QuitButton" type="Button" parent="Camera3D/StartUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -198.5
offset_right = 58.5
offset_bottom = -153.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_eb6dy")
theme_override_styles/normal = SubResource("StyleBoxFlat_trceg")
text = "Quit"

[node name="ScoresButton" type="Button" parent="Camera3D/StartUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -134.5
offset_right = 58.5
offset_bottom = -89.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/normal = SubResource("StyleBoxFlat_tipki")
text = "Scores"

[node name="StartButton" type="Button" parent="Camera3D/StartUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.5
offset_top = -70.5
offset_right = 58.5
offset_bottom = -25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_choun")
theme_override_styles/normal = SubResource("StyleBoxFlat_85g3d")
text = "Start"

[node name="HighScoreUI" type="Control" parent="Camera3D"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Camera3D/HighScoreUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -80.0
offset_right = 90.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Camera3D/HighScoreUI/Panel"]
layout_mode = 0
offset_right = 180.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Camera3D/HighScoreUI/Panel/Panel"]
layout_mode = 0
offset_right = 180.0
offset_bottom = 34.0
text = "New High Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Camera3D/HighScoreUI/Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 48.0
offset_right = 84.0
offset_bottom = 71.0
text = "Score:"

[node name="Score" type="LineEdit" parent="Camera3D/HighScoreUI/Panel"]
layout_mode = 0
offset_left = 88.0
offset_top = 46.0
offset_right = 157.0
offset_bottom = 77.0
alignment = 1
max_length = 3
editable = false
emoji_menu_enabled = false

[node name="NameLabel" type="Label" parent="Camera3D/HighScoreUI/Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 84.0
offset_right = 81.0
offset_bottom = 107.0
text = "Name:"

[node name="Name" type="LineEdit" parent="Camera3D/HighScoreUI/Panel"]
layout_mode = 0
offset_left = 88.0
offset_top = 80.0
offset_right = 157.0
offset_bottom = 111.0
alignment = 1
max_length = 3
emoji_menu_enabled = false

[node name="SubmitButton" type="Button" parent="Camera3D/HighScoreUI/Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 120.0
offset_right = 87.0
offset_bottom = 151.0
theme_override_styles/hover = SubResource("StyleBoxFlat_a8y0u")
theme_override_styles/normal = SubResource("StyleBoxFlat_jkv2x")
text = "Submit"

[node name="BackButton" type="Button" parent="Camera3D/HighScoreUI/Panel"]
layout_mode = 0
offset_left = 96.0
offset_top = 120.0
offset_right = 159.0
offset_bottom = 151.0
theme_override_styles/hover = SubResource("StyleBoxFlat_jbj1t")
theme_override_styles/normal = SubResource("StyleBoxFlat_muem4")
text = "Back"

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_tefeu")

[node name="WhackAMoleMachine" parent="." instance=ExtResource("2_0wfyh")]

[node name="Wall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.3)
mesh = SubResource("PlaneMesh_jyhfs")

[connection signal="pressed" from="Camera3D/StartUI/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Camera3D/StartUI/ScoresButton" to="." method="_on_scores_button_pressed"]
[connection signal="pressed" from="Camera3D/StartUI/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Camera3D/HighScoreUI/Panel/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Camera3D/HighScoreUI/Panel/BackButton" to="." method="_on_back_button_pressed"]
